// See the diagram in https://dbdiagram.io/d

Project Hyosei {
  database_type: "PostgreSQL"
}

Table User {
  id uuid [pk]
  email varchar(255) [unique, note: "Email opcional, pero único si se usa"]
  rut varchar(12) [unique, note: "RUT opcional, validado en formato chileno"]
  password varchar(255) [note: "Hasheada con bcrypt"]
  name varchar(255)
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  role_id uuid [ref: > Role.id, note: "Relaciona con tabla de roles"]

  indexes {
    (email)
    (rut)
  }
}

Table Role {
  id uuid [pk]
  name varchar(50) [unique, note: "Ej: visitor, evaluator, staff, admin"]
  label varchar  [note: "Nombre visible, Ej: Administrador, Staff, Jurado"]
  description text
}

Table Client {
  id           uuid       [pk]
  name         varchar    [not null, unique] // Nombre del cliente (ej. "Universidad de Tarapacá")
  apiKey      varchar    [not null, unique] // Token único para autenticación
  contact_email varchar   // Correo de contacto del cliente
  logo_url     varchar    // (opcional) Branding o imagen
  created_at   timestamp  [not null, default: `now()`]
  updated_at   timestamp  [not null, default: `now()`]

  indexes {
    (api_key)
  }
}

Table ClientStaff {
  id         uuid      [pk]
  user_id    uuid      [not null, ref: > User.id]
  client_id  uuid      [not null, ref: > Client.id]
  role_id    uuid      [not null, ref: > Role.id]
  position   varchar   [note: "Opcional, título libre que se muestra en dashboard"]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (user_id, client_id) [unique]
  }
}

Table PendingClientStaff {
  id          uuid      [pk]
  email       varchar   [not null, unique] // Puede repetirse si deseas permitirlo, pero lo normal es restringirlo
  client_id   uuid      [not null, ref: > Client.id]
  role_id     uuid      [not null, ref: > Role.id]
  position    varchar   [note: "Opcional, título libre que se muestra en dashboard"]
  invite_token varchar  [not null, unique] // Para validar el enlace de invitación
  status      varchar   [default: 'pending'] // 'pending' | 'accepted' | 'expired' | 'revoked'
  expires_at  timestamp [not null]
  created_at  timestamp [default: `now()`]
  updated_at  timestamp [default: `now()`]

  indexes {
    (email, client_id)
  }
}

Table Event {
  id uuid [pk]
  name varchar
  description text
  date_start date
  date_end date
  location varchar
  banner_url varchar
  client_id uuid [ref: > Client.id]

  indexes {
    (client_id)
  }
}

Table Project {
  id uuid [pk]
  title varchar
  description text
  image_url varchar
  event_id uuid [ref: > Event.id]
  created_at timestamp
  updated_at timestamp
}

Table ProjectMember {
  id uuid [pk]
  project_id uuid [ref: > Project.id]
  full_name varchar
  role varchar [note: "Ej: autor, coautor, expositor, tambien opcional"]
}

Table Category {
  id uuid [pk]
  name varchar
  description text
  event_id uuid [ref: > Event.id]
}

Table EvaluationForm {
  id uuid [pk]
  name varchar
  description text
  event_id uuid [ref: > Event.id]
  created_at timestamp
  updated_at timestamp
  note: "Formulario de evaluación asociado a un evento. Puede tener muchas preguntas."
}

Table EvaluationQuestion {
  id uuid [pk]
  form_id uuid [ref: > EvaluationForm.id]
  question text
  weight float [note: "Peso entre 0 y 1. La suma total del formulario debe ser 1.0"]
  order int
  created_at timestamp
  updated_at timestamp
  note: "Preguntas ordenadas que componen un formulario de evaluación"
}

Table ProjectEvaluation {
  id uuid [pk]
  project_id uuid [ref: > Project.id]
  evaluator_id uuid [ref: > User.id]
  form_id uuid [ref: > EvaluationForm.id]
  final_score float [note: "Nota final calculada con los pesos"]
  created_at timestamp
  note: "Evaluación completa de un proyecto por parte de un evaluador. No modificable."
}

Table EvaluationAnswer {
  id uuid [pk]
  evaluation_id uuid [ref: > ProjectEvaluation.id]
  question_id uuid [ref: > EvaluationQuestion.id]
  score float [note: "Nota de 1 a 7 o escala definida"]
  comment text [note: "Comentario opcional del evaluador"]
  note: "Respuesta individual de una pregunta dentro de una evaluación"
}

Table EvaluationReviewer {
  id uuid [pk]
  event_id uuid [ref: > Event.id]
  user_id uuid [ref: > User.id]
  role varchar [note: "Ej: jurado, profesor, externo"]
  assigned_forms int [note: "Opcional: límite de formularios a evaluar"]
  note: "Relación entre evaluadores y eventos"
}

Table AttendanceSession {
  id uuid [pk]
  event_id uuid [ref: > Event.id]
  name varchar [note: "Nombre o etiqueta, ej: 'Día 1 - Mañana'"]
  date date
  start_time time
  end_time time
  created_at timestamp
  updated_at timestamp
  note: "Representa una sesión de asistencia dentro de un evento"
}

Table ProjectMemberAttendance {
  id uuid [pk]
  session_id uuid [ref: > AttendanceSession.id]
  project_member_id uuid [ref: > ProjectMember.id]
  status varchar [note: "Estado: presente, ausente, justificado, etc."]
  comment text [note: "Comentario opcional del administrador"]
  timestamp timestamp [note: "Hora exacta de registro"]
  note: "Asistencia registrada para un miembro del proyecto en una sesión"
}

Table Visitor {
  id uuid [pk]
  project_member_id uuid [ref: > ProjectMember.id]
  full_name varchar
  institution varchar [note: "Opcional: colegio, universidad, empresa"]
  visit_time timestamp
  created_at timestamp
  note: "Registro de una persona que vino a ver a un miembro específico de un proyecto"
}
